@@ -1,5 +1,7 @@
 
 7.74  2018-04-06
+  - Improved unknown placeholder types to match nothing in
+    Mojolicious::Routes::Pattern.
 
 7.73  2018-04-05
   - Added support for routes with placeholder types.
